# 1.0.4 : Autologin & bugs

* AutoLogin via FreeSSO and AuthNegociator
* getOne : required id
* createOne : PK ignore

# 1.0.2 : First test version

* JsonApi / Json input, output format
* Autocomplete webservice
* Phinx integration

# 1.0.0 : Work in progress